# cs-web

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  PLAN.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
assets/: README.md
assets/models/psx/characters/cartoon-woman/: cartoon_woman.fbx  cartoon_woman.glb
assets/models/psx/weapons/ak47/: ak47.glb
assets/models/psx/weapons/arms/: player_arms.glb
assets/models/psx/weapons/knife/: knife.glb
assets/models/psx/weapons/m4a1/: m4a1.glb
assets/models/psx/weapons/mp5/: mp5.glb
client/: index.html
client/src/: arena.ts  audio.ts  browser_net.cpp  browser_net.h  generated.d.ts  hud.ts  input.ts  main.cpp  main.ts  renderer.ts  runtime_model.cpp  runtime_model.h  sim.ts  viewmodel.ts
net/include/cs/: client_prediction.h  interpolation.h  net_protocol.h
net/src/: client_prediction.cpp  interpolation.cpp  net_protocol.cpp
server/include/cs/: server.h  server_security.h
server/src/: main.cpp  server.cpp  server_security.cpp  webrtc_main.cpp
server/tests/: server_tests.cpp
sim/: CMakeLists.txt
sim/include/cs/: sim.h
sim/src/: pmove.cpp  sim.cpp  state.h  weapons.cpp  world.cpp  world.h
sim/tests/: CMakeLists.txt  sim_tests.cpp
src/: audio.ts  constants.ts  game.ts  hud.ts  input.ts  menu.ts  player.ts  resetboard.ts  room.ts  settings.ts  targets.ts  weapon.ts
tools/: audit-glb.mjs  embed-glb-image.mjs  fetch-itch-asset.mjs  serve.mjs
web/: index.html
